Remove original devcontainer configuration file